@@ -2,7 +2,9 @@
 2007-01-13 (REL_1_1_2) Christian Walter <wolti@sil.at>:
  Notes: Fixed typo with the defined defining the supported Modbus
    functions. Fixed bug when illegal slave address was passed to
-   eMBInit where the error was not detected.
+   eMBInit where the error was not detected. Fixed typo in the holding
+   registers where the frame for write multiple registers was parsed with 
+   the wrong constants. The fix is not critical because the values matched.
 
  Detailed notes:
    - BUG (ALL): Modbus functions are compiled into the stack conditionally
@@ -12,6 +14,8 @@
    - BUG (ALL): eMBInit did not correctly check for addresses. Therefore
       is was possible to start the Modbus stack with an address of 0
       or one > 247.
+  - BUG (ALL): eMBFuncWriteHoldingRegister should use 
+      MB_PDU_FUNC_WRITE_MUL_ADDR_OFF and not MB_PDU_FUNC_READ_ADDR_OFF.   
 
 2006-11-19 (REL_1_1_1) Christian Walter <wolti@sil.at>:
  Notes: Fixed bug in Read/Write Multiple Registers function where
